Country Tracker (2014-03-10 shi)
==============================
Added breadcrumbs
Changed footer to include License
Graphs now include percentages in legend
Added Spanish translation
Transactions renamed to Spend
Added currency to headers
Declared IATI or Non-IATI (CRS & Others)
Added Donor/Year/Total spend to hDonor Spend header
Added Current Spend to Donor Activities header

Country Tracker (2014-03-05 shi)
==============================
Added Data Investigators email link
Added icons
Added redesigned Donors/Sectors modules


Country Tracker (2014-03-05 shi)
==============================
Redesign View 3
Added Google map as beginning of District module
Started on localization modules
Added French translation
Changed SAVi order and design


Country Tracker (2014-02-28 shi)
==============================
Changed footer text


Country Tracker (2014-02-25 shi)
==============================
Styled View 2 for Country Tracker front page layout
Changed navigation bar to include timestamp
Added snapshot summary for projects
Include snapshots of money modules


Country Tracker (2014-02-20 shi)
==============================
Added Where's the money modules (donors, sectors, districts)
Styled tables for each module
Changed links of navigation bar to include new modules
Sticky footer
Removed margin from money modules


Country Tracker (2014-02-19 shi)
==============================
Modular themeing begins (flag/country/background image)
Added example backgrounds (cc0)
Linked SAVi for individual activity links
Added navigation bar to SAVi for consistency
Added link back to modules
Added IATI footer


Country Tracker (2014-02-18 shi)
==============================
Added new landing page
Phase 1 branding for modules
Activity View is now SAVi (module)
Links to 3 country examples (BD, UG, HN)
Background image license CC0 Public Domain
Included Query examples for live testing
Added more extensive examples in dstore documentation

