@@ -1,3 +1,12 @@
+Country Tracker (2014-03-11 shi)
+==============================
+Alerts added to non-IATI publisher in listings
+Declaration added to XML SAVi
+Added declarations to table headers where needed
+Changed tooltip hover states to reflect data displayed
+Tightened up whitespace for whole site
+
+
 Country Tracker (2014-03-10 shi)
 ==============================
 Added breadcrumbs
@@ -7,10 +16,11 @@ Added Spanish translation
 Transactions renamed to Spend
 Added currency to headers
 Declared IATI or Non-IATI (CRS & Others)
-Added Donor/Year/Total spend to hDonor Spend header
+Added Donor/Year/Total spend to Donor Spend header
 Added Current Spend to Donor Activities header
 
-Country Tracker (2014-03-05 shi)
+
+Country Tracker (2014-03-06 shi)
 ==============================
 Added Data Investigators email link
 Added icons
